Overflow Fix
Discovered the overflow property is still not working correctly. Everything worked on my local host but not when I deployed to gh-pages. This commit is an attempted fix.

--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,8 @@ a {
     padding-bottom: 20px;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: auto; 
+    overflow-y: auto;
   }
   
   .col-nav ul {
@@ -225,6 +227,8 @@ a {
     padding-bottom: 20px;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: auto; 
+    overflow-y: auto;
   }
   
   .col-nav ul {
@@ -312,6 +316,8 @@ a {
     background-image: url('./img/blur2.png');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: auto; 
+    overflow-y: auto;
   }
 
   .col-nav ul {
@@ -403,6 +409,8 @@ a {
     background-image: url('./img/blur2.png');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: auto; 
+    overflow-y: auto;
   }
 
   .col-nav ul {
@@ -474,7 +482,6 @@ a {
     height: 100vh;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
   }
 
   .App {
@@ -509,6 +516,8 @@ a {
     background-image: url('./img/blur2.png');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: auto; 
+    overflow-y: auto;
   }
 
   .col-nav ul {
